# InstaDM-Saver

./: .gitignore  README.md  instagram_dm_fetcher.py  instagram_dm_fetcher_GUI.py  instagram_flask_app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_gui.py  setup.py
instagram_dm_fetcher/: README.md  instagram_dm_fetcher.py  requirements.txt
instagram_dm_saver/: __init__.py  cli.py  gui.py
instagram_dm_saver/core/: __init__.py  auth.py  messages.py
instagram_dm_saver/storage/: __init__.py  config.py  credentials.py  exporters.py
instagram_dm_saver/tests/: __init__.py  conftest.py  test_config.py  test_credentials.py  test_exporters.py  test_rate_limiter.py
instagram_dm_saver/utils/: __init__.py  exceptions.py  logger.py  rate_limiter.py
